--- a/package.json
+++ b/package.json
@@ -48,9 +48,15 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
     "uuid": "^9.0.1",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "bullmq": "^5.15.0",
+    "ioredis": "^5.3.2",
+    "socket.io": "^4.7.2",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
